tdf#148008: do not proceed after the marked range

Implementation error in commit c008dc483f8c6840803983e7e351cec6fdd32070
("Switch to using multi_type_vector for cell storage.", 2013-06-24).

Change-Id: I1e946b3b816db3d24f79a10fe8aa0dfc673b2e4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149026
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>